--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
 		"icon": "svgr SvgIcons -d src/components/icon/svg-icons --typescript --no-prettier"
 	},
 	"dependencies": {
+		"@fyr/auth": "workspace:*",
+		"@fyr/navigation": "workspace:*",
+		"@fyr/theme": "workspace:*",
+		"@fyr/ui": "workspace:*",
+		"@convex-dev/better-auth": "0.9.7",
 		"@fullcalendar/core": "^6.1.15",
 		"@fullcalendar/daygrid": "^6.1.15",
 		"@fullcalendar/interaction": "^6.1.15",
@@ -20,14 +25,16 @@
 		"@fullcalendar/timegrid": "^6.1.15",
 		"@hello-pangea/dnd": "^17.0.0",
 		"@popperjs/core": "^2.11.8",
+		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tanstack/react-table": "^8.20.6",
 		"@tremor/react": "^3.18.0",
-		"@workos-inc/authkit-nextjs": "^2.9.0",
 		"apexcharts": "^4.4.0",
-		"better-auth": "^1.3.18",
+		"better-auth": "1.3.27",
+		"better-auth-convex": "^0.4.3",
 		"classnames": "^2.5.1",
-		"convex": "^1.27.3",
-		"convex-helpers": "^0.1.7",
+		"convex": "1.28.2",
+		"convex-ents": "^0.16.0",
+		"convex-helpers": "0.1.105",
 		"d3-fetch": "^3.0.1",
 		"d3-geo": "^3.1.1",
 		"d3-scale": "^4.0.2",
@@ -38,16 +45,16 @@
 		"i18next-resources-to-backend": "^1.2.1",
 		"is-hotkey": "^0.2.0",
 		"lodash": "^4.17.21",
-		"next": "^15.1.6",
-		"next-auth": "^4.24.11",
+		"next": "16.0.1",
 		"next-i18n-router": "^5.5.1",
 		"pascalcase": "^2.0.0",
-		"react": "^19.0.0",
+		"react": "19.2.0",
 		"react-apexcharts": "^1.7.0",
 		"react-date-range": "^2.0.1",
-		"react-dom": "^19.0.0",
+		"react-dom": "19.2.0",
 		"react-hook-form": "^7.48.2",
 		"react-i18next": "^15.4.0",
+		"react-icons": "^5.5.0",
 		"react-markdown": "^9.0.3",
 		"react-popper": "^2.3.0",
 		"react-scripts": "5.0.1",
@@ -64,7 +71,7 @@
 		"wavesurfer.js": "^7.9.0",
 		"web-vitals": "^4.2.4",
 		"yup": "^1.6.1",
-		"zod": "^3.22.4"
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
