--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 		"icon": "svgr SvgIcons -d src/components/icon/svg-icons --typescript --no-prettier"
 	},
 	"dependencies": {
+		"@convex-dev/better-auth": "0.9.7",
 		"@fyr/auth": "workspace:*",
 		"@fyr/navigation": "workspace:*",
 		"@fyr/theme": "workspace:*",
 		"@fyr/ui": "workspace:*",
-		"@convex-dev/better-auth": "0.9.7",
 		"@fullcalendar/core": "^6.1.15",
 		"@fullcalendar/daygrid": "^6.1.15",
 		"@fullcalendar/interaction": "^6.1.15",
@@ -40,11 +40,12 @@
 		"d3-scale": "^4.0.2",
 		"dayjs": "^1.11.13",
 		"formik": "^2.4.6",
-		"framer-motion": "^12.0.10",
+		"framer-motion": "^12.23.24",
 		"i18next": "^24.2.2",
 		"i18next-resources-to-backend": "^1.2.1",
 		"is-hotkey": "^0.2.0",
 		"lodash": "^4.17.21",
+		"lucide-react": "^0.554.0",
 		"next": "16.0.1",
 		"next-i18n-router": "^5.5.1",
 		"pascalcase": "^2.0.0",
