--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "alias-nextjs",
 	"version": "1.3.0",
 	"private": true,
+	"packageManager": "pnpm@9.15.0",
 	"scripts": {
 		"dev": "NODE_OPTIONS='--inspect' next dev",
 		"build": "next build",
@@ -13,11 +14,12 @@
 		"biome:fix": "biome check --write .",
 		"biome:format": "biome format --write .",
 		"biome:lint": "biome lint .",
-		"icon": "svgr SvgIcons -d src/components/icon/svg-icons --typescript --no-prettier"
+		"icon": "svgr SvgIcons -d src/components/icon/svg-icons --typescript --no-prettier",
+		"update-browserslist": "npx update-browserslist-db@latest"
 	},
 	"dependencies": {
 		"@convex-dev/auth": "^0.0.90",
-		"@convex-dev/better-auth": "0.9.7",
+		"@convex-dev/better-auth": "0.10.10",
 		"@fullcalendar/core": "^6.1.15",
 		"@fullcalendar/daygrid": "^6.1.15",
 		"@fullcalendar/interaction": "^6.1.15",
@@ -31,10 +33,10 @@
 		"@tanstack/react-table": "^8.20.6",
 		"@tremor/react": "^3.18.0",
 		"apexcharts": "^4.4.0",
-		"better-auth": "1.3.27",
-		"better-auth-convex": "^0.4.3",
+		"better-auth": "1.4.9",
+		"better-convex": "^0.1.0",
 		"classnames": "^2.5.1",
-		"convex": "1.28.2",
+		"convex": "1.31.5",
 		"convex-ents": "^0.16.0",
 		"convex-helpers": "0.1.105",
 		"d3-fetch": "^3.0.1",
