fix(auth): resolve 403/500 errors in Convex Better Auth integration
- Update Convex URLs to new deployment (resilient-dinosaur-332)
- Add localhost ports to trustedOrigins for dev environment
- Fix siteUrl fallback to use BETTER_AUTH_URL or NEXT_PUBLIC_SITE_URL
- Add API route handler using convexBetterAuthNextJs
- Update server.ts to export proper auth helpers

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,25 @@
+# Development environment configuration for ALIAS
+# This file configures the development environment with local Convex instance
+
+# URLs
 NEXT_PUBLIC_URL="http://localhost:3000"
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+SITE_URL="http://localhost:3000"
+
+# Convex Configuration
+CONVEX_URL="https://resilient-dinosaur-332.convex.cloud"
+NEXT_PUBLIC_CONVEX_URL="https://resilient-dinosaur-332.convex.cloud"
+CONVEX_SITE_URL="https://resilient-dinosaur-332.convex.site"
+NEXT_PUBLIC_CONVEX_SITE_URL="https://resilient-dinosaur-332.convex.site"
+
+# BetterAuth Configuration
+BETTER_AUTH_URL="http://localhost:3000"
+BETTER_AUTH_SECRET="dev-secret-change-in-production-use-openssl-rand-hex-32"
+
+# Google OAuth (Local Development)
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+# Authorized redirect URIs for local dev:
+# - http://localhost:3000/auth/callback/google
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
