feat(email): integrate Resend email service with Convex
- Add @convex-dev/resend component for durable email delivery
- Create email service with templates:
  - Welcome email for new users
  - Password reset email
  - Email verification
  - Team/org invitation email
  - Generic notification email
- Add webhook handler at /resend-webhook for delivery events
- Add emailEvents table for tracking delivery status
- Add cron jobs for automated cleanup of old emails
- Configure React Email for template rendering
- Add RESEND_API_KEY and RESEND_WEBHOOK_SECRET env vars

Features:
- Queueing with automatic batching
- Durable execution with retry logic
- Idempotency to prevent duplicate sends
- Rate limiting compliance
- Webhook event handling (delivered, bounced, complained, opened, clicked)

--- a/.env.development
+++ b/.env.development
@@ -23,3 +23,10 @@ BETTER_AUTH_SECRET="dev-secret-change-in-production-use-openssl-rand-hex-32"
 # - http://localhost:3000/auth/callback/google
 GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# Resend Email Configuration
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY="re_xxxxxxxxxx"
+# Webhook secret for verifying Resend webhook signatures
+# Get from: https://resend.com/webhooks (after creating webhook)
+RESEND_WEBHOOK_SECRET="whsec_xxxxxxxxxx"
