--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
 	"dependencies": {
 		"@convex-dev/auth": "^0.0.90",
 		"@convex-dev/better-auth": "0.10.10",
-		"@fullcalendar/core": "^6.1.15",
-		"@fullcalendar/daygrid": "^6.1.15",
-		"@fullcalendar/interaction": "^6.1.15",
-		"@fullcalendar/list": "^6.1.15",
-		"@fullcalendar/react": "^6.1.15",
-		"@fullcalendar/timegrid": "^6.1.15",
+		"@convex-dev/resend": "^0.2.3",
+		"@fullcalendar/core": "^6.1.20",
+		"@fullcalendar/daygrid": "^6.1.20",
+		"@fullcalendar/interaction": "^6.1.20",
+		"@fullcalendar/list": "^6.1.20",
+		"@fullcalendar/react": "^6.1.20",
+		"@fullcalendar/timegrid": "^6.1.20",
 		"@hello-pangea/dnd": "^17.0.0",
-		"@liveblocks/node": "^3.10.1",
+		"@liveblocks/node": "^3.13.3",
 		"@popperjs/core": "^2.11.8",
-		"@t3-oss/env-nextjs": "^0.13.8",
-		"@tanstack/react-table": "^8.20.6",
-		"@tremor/react": "^3.18.0",
-		"apexcharts": "^4.4.0",
+		"@react-email/components": "^1.0.6",
+		"@react-email/render": "^2.0.4",
+		"@t3-oss/env-nextjs": "^0.13.10",
+		"@tanstack/react-table": "^8.21.3",
+		"@tremor/react": "^3.18.7",
+		"apexcharts": "^4.7.0",
 		"better-auth": "1.4.9",
 		"better-convex": "^0.1.0",
 		"classnames": "^2.5.1",
@@ -42,89 +45,93 @@
 		"d3-fetch": "^3.0.1",
 		"d3-geo": "^3.1.1",
 		"d3-scale": "^4.0.2",
-		"dayjs": "^1.11.13",
-		"formik": "^2.4.6",
-		"framer-motion": "^12.23.24",
-		"i18next": "^24.2.2",
+		"dayjs": "^1.11.19",
+		"formik": "^2.4.9",
+		"framer-motion": "^12.29.2",
+		"i18next": "^24.2.3",
 		"i18next-resources-to-backend": "^1.2.1",
 		"is-hotkey": "^0.2.0",
-		"lodash": "^4.17.21",
+		"lodash": "^4.17.23",
 		"lucide-react": "^0.554.0",
 		"next": "16.1.3",
-		"next-i18n-router": "^5.5.1",
+		"next-i18n-router": "^5.5.6",
 		"pascalcase": "^2.0.0",
 		"react": "19.2.3",
-		"react-apexcharts": "^1.7.0",
+		"react-apexcharts": "^1.9.0",
 		"react-date-range": "^2.0.1",
 		"react-dom": "19.2.3",
-		"react-hook-form": "^7.48.2",
-		"react-i18next": "^15.4.0",
+		"react-hook-form": "^7.71.1",
+		"react-i18next": "^15.7.4",
 		"react-icons": "^5.5.0",
-		"react-markdown": "^9.0.3",
+		"react-markdown": "^9.1.0",
 		"react-popper": "^2.3.0",
-		"react-scripts": "5.0.1",
-		"react-select": "^5.10.0",
+		"react-select": "^5.10.2",
 		"react-simple-maps": "^3.0.0",
-		"react-syntax-highlighter": "^15.6.1",
+		"react-syntax-highlighter": "^15.6.6",
 		"react-use-scrollspy": "^3.1.1",
-		"reaviz": "^15.6.1",
+		"reaviz": "^15.19.1",
+		"resend": "^6.9.1",
 		"slate": "^0.112.0",
 		"slate-history": "^0.110.3",
 		"slate-react": "^0.110.3",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.3",
-		"wavesurfer.js": "^7.9.0",
+		"tailwindcss": "^3.4.19",
+		"typescript": "^5.9.3",
+		"wavesurfer.js": "^7.12.1",
 		"web-vitals": "^4.2.4",
-		"yup": "^1.6.1",
+		"yup": "^1.7.1",
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"@biomejs/biome": "^2.3.7",
-		"@eslint/compat": "^1.2.6",
-		"@eslint/js": "^9.19.0",
-		"@next/eslint-plugin-next": "^15.1.6",
+		"@biomejs/biome": "^2.3.13",
+		"@eslint/compat": "^1.4.1",
+		"@eslint/js": "^9.39.2",
+		"@next/eslint-plugin-next": "^15.5.11",
 		"@svgr/cli": "^8.1.0",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/d3-fetch": "^3.0.7",
-		"@types/d3-scale": "^4.0.8",
+		"@types/d3-scale": "^4.0.9",
 		"@types/is-hotkey": "^0.1.10",
-		"@types/lodash": "^4.17.15",
+		"@types/lodash": "^4.17.23",
 		"@types/node": "latest",
 		"@types/pascalcase": "^1.0.3",
 		"@types/react": "latest",
-		"@types/react-date-range": "^1.4.9",
+		"@types/react-date-range": "^1.4.10",
 		"@types/react-dom": "latest",
 		"@types/react-simple-maps": "^3.0.6",
 		"@types/react-syntax-highlighter": "^15.5.13",
-		"autoprefixer": "^10.4.20",
+		"autoprefixer": "^10.4.23",
 		"babel-plugin-react-compiler": "^1.0.0",
-		"baseline-browser-mapping": "^2.9.15",
+		"baseline-browser-mapping": "^2.9.19",
 		"date-fns": "^3.6.0",
-		"eslint": "^9.19.0",
+		"eslint": "^9.39.2",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-airbnb-typescript": "^18.0.0",
-		"eslint-config-next": "^15.1.6",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-import": "^2.31.0",
+		"eslint-config-next": "^15.5.11",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-prettier": "^5.2.3",
-		"eslint-plugin-react": "^7.37.4",
-		"eslint-plugin-react-hooks": "^5.1.0",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"eslint-plugin-prettier": "^5.5.5",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"globals": "^15.15.0",
+		"prettier": "^3.8.1",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"raw-loader": "^4.0.2",
-		"typescript-eslint": "^8.22.0",
-		"ultracite": "^6.3.6"
+		"typescript-eslint": "^8.54.0",
+		"ultracite": "^6.5.1"
 	},
 	"resolutions": {
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
 		"d3-color": ">=3.1.0",
 		"postcss": ">=8.4.31",
 		"nth-check": ">=2.1.1",
 		"punycode": "^2.0.0"
 	},
 	"overrides": {
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
 		"d3-color": ">=3.1.0",
 		"eslint": "$eslint",
 		"postcss": ">=8.4.31",
