feat(security): add 1Password CLI integration for secrets management
- Add .env.1password with op:// secret references
- Add setup-1password.sh script to create vault item
- Add pnpm scripts: dev:op, build:op, start:op, setup:1password
- Update .gitignore to allow .env.1password (contains only references)

Usage:
  pnpm setup:1password  # Create 1Password item
  pnpm dev:op           # Run dev server with secrets from 1Password

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env files (contain secrets)
 .env*.local
 .env
+
+# 1Password env file is safe to commit (contains op:// references only)
+!.env.1password
 
 # vercel
 .vercel
